[package]
name = "scx_meteor"
version = "0.1.0"
authors = ["Anton Palgunov"]
edition = "2021"
description = "LP-first energy-aware sched_ext scheduler for Intel Meteor Lake (3-tier core topology)"
license = "GPL-2.0-only"

[dependencies]
anyhow      = "1.0.65"
ctrlc       = { version = "3.1", features = ["termination"] }
clap        = { version = "4.5.28", features = ["derive", "env", "unicode", "wrap_help"] }
crossbeam   = "0.8.4"
dirs        = "5.0"
libbpf-rs   = "=0.26.1"
log         = "0.4.17"
libc        = "0.2"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
simplelog   = "0.12"
scx_stats       = { path = "../../../rust/scx_stats", version = "1.0.22" }
scx_stats_derive = { path = "../../../rust/scx_stats/scx_stats_derive", version = "1.0.21" }
scx_utils       = { path = "../../../rust/scx_utils", version = "1.0.26" }

[build-dependencies]
scx_cargo = { path = "../../../rust/scx_cargo", version = "1.0.27" }

[features]
enable_backtrace = []
